# lab2_matrix_multiply

./: CMakeLists.txt  README.MD  create_graph.py  main.cpp  run.py
