cmake_minimum_required(VERSION 3.16)
project(lab2)

set(CMAKE_CXX_STANDARD 17)

add_executable(lab2 main.cpp)
find_package(MPI REQUIRED)
if(MPI_FOUND)
    message(STATUS "MPI support enabled")
    set(CMAKE_C_COMPILER ${MPI_C_COMPILER})
    set(CMAKE_CXX_COMPILER ${MPI_CXX_COMPILER})
    include_directories(${MPI_INCLUDE_PATH})
else()
    message(STATUS "MPI support disabled")
endif()
if(MPI_FOUND)
    target_compile_options(lab2 PRIVATE ${MPI_COMPILE_FLAGS})
    target_link_libraries(lab2 ${MPI_LIBRARIES})
    target_include_directories(lab2 PRIVATE ${MPI_INCLUDE_PATH})
    if(MPI_LINK_FLAGS)
        set_target_properties(lab2 PROPERTIES LINK_FLAGS "${MPI_LINK_FLAGS}")
    endif()
endif()